# stigpilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LINKEDIN.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
docs/: configuration.md  copy-paste-workflows.md  government-mode.md  python-vs-government-mode.md  release-checklist.md  remediation-boundary.md  where-to-put-stigs.md
docs/sample-packet/: README.md  START_HERE.md  change-brief.html  changes.json  evidence-checklist.md  github-issues.md  jira-import.csv  manager-summary.md  remediation-backlog.csv  servicenow-import.csv
docs/schemas/: changes.schema.json
examples/: stigpilot.toml
examples/chrome_windows_input/: README.md
examples/chrome_windows_output/: START_HERE.md  change-brief.html  change-brief.md  changes.json  controls.csv  controls.json  evidence-checklist.md  github-issues.md  jira-import.csv  manager-summary.md  remediation-backlog.csv  remediation-drafts.md  servicenow-import.csv
examples/chrome_windows_sample/: new.xml
stigpilot/: __init__.py  cli.py  config.py  diff.py  exporters.py  impact.py  models.py  parser.py  reports.py  taxonomy.py  utils.py
stigs/: README.md
tests/: fixtures_new.xml  fixtures_old.xml  test_cli.py  test_config.py  test_diff.py  test_docs_links.py  test_exporters.py  test_government_mode.py  test_impact.py  test_output_quality.py  test_parser.py  test_reports.py
tools/: STIGPilot-Gov.ps1  STIGPilot.cmd  regenerate-examples.ps1
(+45 files in other folders)
