[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stigpilot"
version = "1.0.10"
description = "STIG change intelligence and remediation workflow assistant."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "David Sarkisyan", email = "contact@srkyn.com"}]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.0"]

[project.scripts]
stigpilot = "stigpilot.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["stigpilot*"]
exclude = ["output*", "examples*", "tests*"]
